add diff routes for latex and other docs
